rewrote custom item system with classes & inheritance