@@ -1,6 +1,8 @@
 package io.github.seriousguy888.cheezjailrwguns.commands;
 
-import io.github.seriousguy888.cheezjailrwguns.items.CustomItem;
+import io.github.seriousguy888.cheezjailrwguns.items.CustomItemManager;
+import io.github.seriousguy888.cheezjailrwguns.items.CustomItemUtils;
+import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
@@ -10,19 +12,17 @@ import org.bukkit.inventory.ItemStack;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class GetGunsCommand implements TabExecutor {
   public final List<String> validItems;
 
   public GetGunsCommand() {
-    validItems = Arrays
-        .stream(CustomItem.values())
-        .map(Enum::name)
-        .map(String::toUpperCase)
-        .collect(Collectors.toList());
+    validItems = CustomItemManager.items.stream()
+        .map(e -> e.customItemId)
+        .map(String::toLowerCase)
+        .toList();
+    Bukkit.getLogger().info(String.join(",", validItems));
   }
 
   @Override
@@ -35,7 +35,7 @@ public class GetGunsCommand implements TabExecutor {
       return true;
     }
 
-    String itemName = args[0].toUpperCase();
+    String itemName = args[0].toLowerCase();
 
     int amount = 1;
     if (args.length >= 2) {
@@ -47,7 +47,7 @@ public class GetGunsCommand implements TabExecutor {
 
 
     if (validItems.contains(itemName)) {
-      ItemStack item = CustomItem.valueOf(itemName).item;
+      ItemStack item = CustomItemUtils.getCustomItem(itemName).item;
       item.setAmount(amount);
 
       player.getInventory().addItem(item);
